assets/styles/style.scss
@import 'reset';
$main-color: #6070ff;
$main-title-text-color: #172b4d;
$description-text-color: #344563;
$social-links-bg-color: #505f79;
$lets-connect-text-color: #172b4d;
$large: 1200px;

body {
  background-color: #f7f7f9;

  header {
    background-image: url('../../assets/images/bg-mobile.jpg');
    background-size: cover;
    background-repeat: repeat;
    border-radius: 0 0 0 30% / 0 0 0 15%;
    width: 100%;
    height: 90vh;
    left: 0;
    top: 0;

    .navbar-wrapper {
      .collapse {
        height: 40vh;
        background-color: $main-color;
        border-radius: 8px;
      }

      .nav-link {
        text-decoration: none;
        color: white;
        font-family: 'Poppins', sans-serif;
        font-weight: 600;
        font-size: 2.6rem;
        line-height: 3.4rem;
        text-align: left;
      }

      .logo-text {
        color: $main-color;
      }

      .navbar-toggler-icon {
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(96,112,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
      }
    }

    .brand-logo {
      width: 30%;
    }
  }

  .welcome-text-column {
    font-family: 'Poppins', sans-serif;
    color: $main-title-text-color;
    font-weight: 700;
    font-size: 2.6rem;
    line-height: 3.4rem;
    text-align: left;
  }

  .my-description-column p {
    font-family: 'Poppins', sans-serif;
    color: $description-text-color;
    font-weight: normal;
    font-style: normal;
    font-size: 1rem;
    line-height: 1.7rem;
    text-align: justify;
  }

  .social-media-title {
    font-family: 'Poppins', sans-serif;
    color: $lets-connect-text-color;
    font-weight: 400;
    font-style: normal;
    font-size: 1.2rem;
    text-transform: uppercase;
    line-height: 1.8rem;
  }

  .social-media-link {
    font-size: 2rem;
    margin-right: 1.5rem;
    color: $social-links-bg-color;
  }

  .card {
    width: 90%;
    background-color: #fff;
    border-radius: 16px;

    .image-container {
      width: 92%;
      height: 32vh;
      margin-top: 5%;
      border-radius: 8px;
      background-color: rgb(249, 177, 117);
      margin-left: auto;
      margin-right: auto;
      display: flex;
      align-items: center;
      justify-content: center;

      .card-img-top {
        height: 90%;
        width: 90%;
        cursor: pointer;
      }

      .card-img-top- {
        cursor: pointer;
        object-fit: scale-down;
      }
    }

    .cont-1 {
      background-color: rgb(230, 230, 226);
    }

    .cont-2 {
      background-color: rgb(241, 235, 231);
    }

    .cont-3 {
      background-color: rgb(253, 241, 221);
    }

    .card-title {
      font-size: 2rem;
      font-weight: bold;
    }

    .subtitle-tags-container {
      span {
        font-size: 0.9rem;
      }

      .fa-circle {
        color: #c1c7d0;
        font-size: 0.6rem;
      }
    }

    .badge {
      background-color: #ebebff;
      color: #172b4d;
      line-height: 1.3rem;
    }

    .see-project-btn {
      line-height: 2rem;
    }
  }

  footer {
    /* header-background-mobile */
    border-radius: 0 30% 0 0 / 0 15% 0 0;
    width: 100%;
    height: 90vh;
    left: 0;
    top: 0;
    background: #fff;

    .get-resume-btn {
      width: 50%;
      font-family: 'Poppins', sans-serif;
      color: $lets-connect-text-color;
      font-weight: 500;
      font-style: normal;
      font-size: 1rem;
      line-height: 1.8rem;
      letter-spacing: 6%;
    }

    .accordion-button {
      font-family: 'Poppins', sans-serif;
      color: black;
      font-weight: 500;
      font-style: normal;
      font-size: 1.3rem;
      line-height: 1.8rem;
      letter-spacing: 6%;
    }

    .accordion-body-item {
      background-color: #f7f7f9;
      line-height: 1.8rem;
      margin-bottom: 3%;
    }

    .accordion-body-item-text {
      font-family: 'Poppins', sans-serif;
      color: black;
      font-weight: 500;
      font-style: normal;
      font-size: 1.1rem;
      line-height: 1.3rem;
      letter-spacing: 6%;
    }

    .rounded-circle {
      width: 60%;
    }

    .contact-me {
      /* header-background-mobile */
      border-radius: 20% 0 0 0 / 10% 0 0 0;
      width: 100%;
      height: 100vh;
      left: 0;
      top: 0;
      background: #6070ff;
    }

    .mail-form {
      border-radius: 8px;
      font-family: 'Poppins', sans-serif;
      color: #172b4d;
      font-weight: 400;
      font-style: normal;
      font-size: 1.2rem;
      line-height: 2rem;
      text-indent: 3%;
    }

    .get-intouch-btn {
      border-radius: 8px;
      font-family: 'Poppins', sans-serif;
      color: #172b4d;
      font-weight: 500;
      font-style: normal;
      font-size: 1.2rem;
      line-height: 1.5rem;
    }

    .thankyou_message {
      display: none;
    }
  }

  @media screen and (min-width: $large) {
    header {
      border-radius: 0 0 0 15% / 0 0 0 25%;
      width: 100%;
      height: 100vh;
      left: 0;
      top: 0;
      background-image: url('../../assets/images/bg-desktop-1.jpg');
      background-size: contain;
      background-repeat: repeat;

      .navbar {
        padding: 0;
      }

      .navbar-link {
        text-decoration: none;
        color: #344563;
        font-family: 'Poppins', sans-serif;
        font-weight: 600;
        font-size: 1.6rem;
        line-height: 2.4rem;
        text-align: left;
      }

      .logo-text {
        color: $main-color;
      }
    }

    .welcome-text-column {
      width: 65%;
      margin-top: 8rem !important;
      font-family: 'Poppins', sans-serif;
      color: $main-title-text-color;
      font-weight: 700;
      font-size: 2.6rem;
      line-height: 3.4rem;
      text-align: left;
    }

    .card {
      width: 95%;
      height: 65vh;
      background-color: #fff;
      border-radius: 16px;

      .card-body {
        margin-top: 5%;
        margin-left: 3%;
      }

      .image-container {
        width: 50%;
        height: 80%;
        border-radius: 8px;
        margin-left: 2%;
        margin-right: 2%;
        align-self: center;
        margin-top: 0;

        .card-img-top {
          height: 80%;
          width: 100%;
        }
      }

      .card-title {
        font-size: 2.8rem;
        font-weight: bold;
      }

      .card-text {
        padding-right: 5%;
        font-size: 1.1rem;
        letter-spacing: 0.7px;
      }

      .subtitle-tags-container {
        span {
          font-size: 1.2rem;
          letter-spacing: 2px;
        }

        .fa-circle {
          color: #c1c7d0;
          font-size: 0.6rem;
        }
      }

      .badge {
        background-color: #ebebff;
        color: #172b4d;
        border-radius: 8px;
        font-size: 0.9rem;
        line-height: 1.3rem;
        font-weight: 100;
      }

      .see-project-btn {
        line-height: 2rem;
      }
    }

    footer {
      border-radius: 0 17% 0 0 / 0 13% 0 0;

      .welcome-text-column-footer {
        width: 65%;
        font-family: 'Poppins', sans-serif;
        color: $main-title-text-color;
        font-weight: 700;
        font-size: 2.6rem;
        line-height: 3.4rem;
        text-align: left;
      }

      .accordion-button {
        font-size: 1.1rem;
        line-height: 1.1rem;
      }

      .accordion-body-item {
        height: 6.5rem;
        width: 6.5rem;
      }

      .accordion-body-item-text {
        font-size: 1rem;
        line-height: 1.1rem;
        letter-spacing: 3%;
      }

      .rounded-circle {
        width: 3rem;
      }

      .my-description-column p {
        font-family: 'Poppins', sans-serif;
        font-weight: normal;
        font-style: normal;
        font-size: 1.2rem;
        letter-spacing: 0.8px;
        line-height: 1.7rem;
        text-align: justify;
      }

      .contact-me-text {
        color: #ebebff;
      }

      .contact-me {
        /* header-background-mobile */
        border-radius: 20% 0 0 0 / 10% 0 0 0;
        width: 100%;
        height: 110vh;
        left: 0;
        top: 0;
        background: #6070ff;

        .get-intouch-btn {
          margin-left: 36%;
        }
      }
    }
  }
}

